# rl-chess

./: .env.example  .gitignore  README.md  RESEARCH.md  modal-run.ipynb  pyproject.toml  rivanna-run.ipynb
scripts/: data_prep.py  evaluate.py  grpo_train.py  modal_app.py  rewards.py  run_grpo.sh  serve_model.sh  setup_stockfish.sh  sft_train.py
web/: package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/app/api/move/: route.ts
web/src/components/: Board.tsx  ChessGame.tsx  GameStatus.tsx  MoveHistory.tsx
web/src/lib/: chess-ai.ts  constants.ts
